--- a/style.css
+++ b/style.css
@@ -1,29 +1,30 @@
-/*page showed up in codepen is very differnt from in google.*/
+/*
 
 * {
   outline: dotted 2px red;
 }
 body {
-  background: #444;
+  background: #928F96;
 }
 div {
   padding: px;
   text-align: center;
-  background-color: #444
+  background-color: #F1A107;
   margin-bottom: 30px;
   font-size: 30px;
-  font-family: sans-serif //where one of the google fonts will use
-}
+  font-family: font-family: 'Baloo Paaji', cursive;
 li {
   display: inline;
   margin-top: 100px;
-  margin-right: 80px;
+  margin-right: 70px;
   width: 30px;
   font-size:20px;
+  color: white;
+  text-align: center;
 }
 p {
   padding: 10px;
-  text-align:left;
+  text-align:center;
   font-size: 24px;
 }
 .hero {
@@ -33,6 +34,64 @@ p {
 }
 a: hover {
   text-decoration: none;
+  font-size:16px;
+  color: white;
+
+}
+h1 {
+  text-align: center;
+  font-size:26px
+}*/
+
+
+* {
+  outline: dotted 2px red;
+}
+body {
+  background: #928F96;
+}
+div {
+  padding: px;
+  text-align: center;
+  background-color: #F1A107;
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-family: 'Baloo Paaji', cursive;
+  position: relative;
+}
+#logo {
+  with:200px;
+  height: 60;
+  background: red;
+  margin-left: 30px;
+
+}
+li {
+  display: inline;
+  margin-top: 100px;
+  margin-left:150px;
+  width: 40px;
+  font-size:20px;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+}
+p {
+  padding: 10px;
+  text-align:center;
+  font-size: 24px;
+}
+.hero {
+  width: 960px;
+  height: 550px;
+  margin: 0 auto;
+  text-align: center;
+}
+a: hover {
+  text-decoration: none;
+  font-size:16px;
+  color: white;
+  text-align: center;
 }
 h1 {
   text-align: center;
